--- a/test.scss
+++ b/test.scss
@@ -1,6 +1,9 @@
 klik på hele billede
 skal billede blive større on hover? så bg image?
 
+lidt svært for editor når man ikke kan vælge 3 column
+
+
 alt tekst?
 
 .grid-container {
